--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ footer {
 
 h1 {
     font-size: 2.5rem;
-    margin-top: 80px;
+    margin-top: 60px;
     text-align: center;
 }
 
@@ -44,7 +44,7 @@ footer {
 footer {
     background-color: #474A51;
     position: relative;
-    top: 80vh;
+    top: 20vh;
     color: white;
 
 }
@@ -81,7 +81,7 @@ header {
 }
 
 
-#banner{
+#banner {
     padding: 0;
     width: 100vw;
     max-width: none;
@@ -92,14 +92,26 @@ section img {
     display: inline-block;
     margin: 0 5%;
     width: 20%;
-    
+
 }
 
 section {
     text-align: center;
 }
 
- /* mobile */
+.buy-btn {
+    border: 1px solid black;
+    width: 150px;
+    height: 50px; 
+    color: white;   
+    background-color: black;
+    font-size: 30px;
+    border-radius: 5px;
+    text-align: center;
+    line-height: 50px;
+}
+
+/* mobile */
 @media screen and (max-width: 1200px) {
 
 
@@ -157,7 +169,7 @@ section {
     }
 
     nav li {
-        padding: 0.8em 0;
+        padding: 0 0;
         width: 100%;
         font-weight: 700;
         text-transform: uppercase;
@@ -166,8 +178,10 @@ section {
     nav a {
         color: black;
         text-decoration: none;
-        padding: 0 1em;
+        padding: 1em 1em;
         font-size: 24px;
+        display: block;
+
     }
 
     nav a:hover {
@@ -208,42 +222,105 @@ section {
     }
 
     #banner {
-        padding-top: 20%;
+        padding-top: 30%;
+    }
+
+    section img {
+        display: block;
+        margin: 5% 5%;
+        width: 80vw;
+    }
+
+    img {
+        margin: 5%;
+        padding-top: 30%;
+        max-width: 90vw;
+    }
+
+   
+
+    h1 {
+        font-size: 2rem;
+        margin-top: 20px;
+        text-align: center;
     }
 }
 
+.buy-btn, h2, p {
+    margin: 15px;
+}
 
- /* desktop */
+p {
+    font-family: "Gotham Light";
+}
+
+
+/* desktop */
 @media screen and (min-width: 1201px) {
-        /* designa navbaren*/
-        nav a {
-            text-decoration: none;
-            font-size: 2rem;
-            margin-top: 80px;
-            color: black;
-            border: 1px solid black;
-            background-color: #FFC800;
-            padding: 5px 50px;
-        }
-    
-        nav li {
-            margin-top: 10px;
-            list-style-type: none;
-            display: inline;
-            margin-left: 10%;
-           
-        }
-    
-        nav ul {
-            width: 75%;
-            min-width: 1024px;
-            padding: 15px;
-            margin: 0px auto 0px auto;
-            text-align: center;
-        }
 
-        nav a:hover {
-            background-color: black;
-            color: #FFC800;
-        }
+    /* designa navbaren*/
+    nav a {
+        text-decoration: none;
+        font-size: 2rem;
+        margin-top: 80px;
+        color: black;
+        border: 1px solid black;
+        background-color: #FFC800;
+        padding: 5px 50px;
+    }
+
+    nav li {
+        margin-top: 10px;
+        list-style-type: none;
+        display: inline;
+        margin-left: 10%;
+
+    }
+
+    nav ul {
+        width: 75%;
+        min-width: 1024px;
+        padding: 15px;
+        margin: 0px auto 0px auto;
+        text-align: center;
+    }
+
+    nav a:hover {
+        background-color: black;
+        color: #FFC800;
+    }
+
+    /* css grid för separata produktsidor */
+    .grid-container {
+        display: grid;
+        grid-template-columns: auto auto;
+        padding-top: 15%;
+    }
+
+    .grid-item1 {
+        grid-column: 1 2;
+    }
+
+    .grid-item2 {
+        grid-column: 2 3;
+
+    }
+
+    .grid-item2 h1 {
+        text-align: left;
+        padding-left: 0;
+    }
+
+    .grid-item2 p {
+        text-align: left;
+        font-family: "Gotham Light";
+    }
+
+}
+
+/* padda */
+@media screen and (min-width: 400px) and (max-width: 1200px) {
+    #banner {
+        padding-top: 10%;
+    }
 }
