--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,12 @@ body {
     max-width: 100%;
 }
 
+iframe {
+    display: block;
+    margin: auto;
+    padding: 5%;
+    max-width: 80vw;
+}
 
 section,
 h1,
