--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,10 @@ iframe {
     max-width: 80vw;
 }
 
+.buy-btn:hover {
+ cursor: pointer;
+}
+
 section,
 h1,
 footer {
@@ -300,7 +304,7 @@ p {
         color: black;
         border: 1px solid black;
         background-color: #FFC800;
-        padding: 5px 50px;
+        padding: 5px 25px;
     }
 
     nav li {
@@ -361,4 +365,108 @@ p {
     .product-page-img {
         margin: 0;
     }
+}
+
+
+/*Kassa*/
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 20px;
+    margin-left: 1%;
+    margin-right: 1%;
+    font-size: 1.2rem;
+}
+
+/*tabellens rubrik*/
+thead {
+    background-color: #FFC800;
+}
+
+thead tr {
+    border-bottom: 2px solid gray;
+}
+
+/*Tabellens celler*/
+td {
+    padding: 8px;
+    text-align: left;
+    border-bottom: 1px solid gray;
+}
+
+/*Minibilderna*/
+td img {
+    max-width: 50px;
+    max-height: 50px;
+}
+
+.checkoutbtn {
+    padding: 0.5%;
+    margin-right: 1%;
+    margin-left: 3%;
+    margin-top: 1%;
+    margin-bottom: 5%;
+    border-radius: 10px;
+    font-size: 1.2rem;
+    background-color: #FFC800;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+
+}
+
+.checkoutbtn:hover {
+    background-color: #c49a05;
+}
+
+.form-container {
+    max-width: 400px;
+    margin: 0 auto;
+}
+
+.form-group {
+    margin-bottom: 5%;
+    font-size: 1.2rem;
+}
+
+.form-group input::placeholder {
+    font-size: 1.2rem;
+}
+
+label {
+    display: block;
+    font-weight: 500;
+    margin-bottom: 2%;
+}
+
+input {
+    width: 100%;
+    padding: 8px;
+    border-radius: 4px;
+    border: 1px solid gray;
+}
+
+#slutforbtn {
+    padding: 2%;
+    margin-bottom: 20%;
+    background-color: #FFC800;
+}
+
+#slutforbtn:hover {
+    background-color: #c49a05;
+}
+
+.buybtn {
+    padding: 0.5%;
+    margin-right: 1%;
+    margin-left: 3%;
+    margin-top: 1%;
+    margin-bottom: 5%;
+    border-radius: 10px;
+    font-size: 1.2rem;
+    background-color: #FFC800;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+
+}
+
+.buybtn:hover {
+    background-color: #c49a05;
 }
