--- a/css/styles.css
+++ b/css/styles.css
@@ -420,6 +420,7 @@ td img {
 .form-container {
     max-width: 400px;
     margin: 0 auto;
+    padding: 0 2%;
 }
 
 .form-group {
@@ -438,7 +439,7 @@ label {
 }
 
 input {
-    width: 100%;
+    max-width: 100%;
     padding: 8px;
     border-radius: 4px;
     border: 1px solid gray;
